Adding form.css and built structure of about page

--- a/about.html
+++ b/about.html
@@ -16,14 +16,37 @@
         <a id="home" href="index.html">GUILLERMO SORIA</a>
       </div>
       <div class="links">
-        <a href="">ABOUT</a>
-        <a href="">SERVICES</a>
-        <a href="">BLOG</a>
-        <a href="">CONTACT</a>
+        <a href="about.html">ABOUT</a>
+        <a href="services.html">SERVICES</a>
+        <a href="blog.html">BLOG</a>
+        <a href="contact.html">CONTACT</a>
       </div>
     </nav>
     <main>
-      <h1>About</h1>
+      <div class="container">
+        <h1>About</h1>
+        <p>Text about me</p>
+      </div>
+      <h2 class="header">People I have worked with</h2>
+      <div class="container">
+        <h1>Luminary Digital</h1>
+        <p>Experience</p>
+      </div>
+      <div class="container">
+        <h1>Digital Noir</h1>
+        <p>Experience</p>
+      </div>
+      <div class="container">
+        <h1>Good Dog Design</h1>
+        <p>Experience</p>
+      </div>
+      <div class="container">
+        <h1>Brunswick Daily</h1>
+        <p>Experience</p>
+      </div>
+      <div class="container">
+        <button class="button">DOWNLOAD CV</button>
+      </div>
     </main>
   </body>
   <footer>
