--- a/blog.html
+++ b/blog.html
@@ -13,13 +13,13 @@
   <body>
     <nav>
       <div>
-        <a id="home" href="">GUILLERMO SORIA</a>
+        <a id="home" href="index.html">GUILLERMO SORIA</a>
       </div>
       <div class="links">
-        <a href="">ABOUT</a>
-        <a href="">SERVICES</a>
-        <a href="">BLOG</a>
-        <a href="">CONTACT</a>
+        <a href="about.html">ABOUT</a>
+        <a href="services.html">SERVICES</a>
+        <a href="blog.html">BLOG</a>
+        <a href="contact.html">CONTACT</a>
       </div>
     </nav>
     <main>
