--- a/contact.html
+++ b/contact.html
@@ -13,17 +13,29 @@
   <body>
     <nav>
       <div>
-        <a id="home" href="">GUILLERMO SORIA</a>
+        <a id="home" href="index.html">GUILLERMO SORIA</a>
       </div>
       <div class="links">
-        <a href="">ABOUT</a>
-        <a href="">SERVICES</a>
-        <a href="">BLOG</a>
-        <a href="">CONTACT</a>
+        <a href="about.html">ABOUT</a>
+        <a href="services.html">SERVICES</a>
+        <a href="blog.html">BLOG</a>
+        <a href="contact.html">CONTACT</a>
       </div>
     </nav>
     <main>
-      <h1>Contact</h1>
+      <div class="container">
+        <h1>Get in touch</h1>
+        <h2>hola@guillermosoria.com.au</h2>
+      </div>
+      <div>
+        <form class="container">
+          <label for="name">Name</label>
+          <input type="text" name="name" />
+          <label for="email">Email</label>
+          <input type="text" name="email" />
+          <input id="form-submit" type="submit" />
+        </form>
+      </div>
     </main>
   </body>
   <footer>
