--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <p class="paragraph-style">Developer Bulrb</p>
         </div>
       </div>
-      <!-- <div class="button"> -->
+      <div class="button">
         <button class="button">LEARN MORE</button>
-      <!-- </div> -->
+      </div>
       
       <!-- how can I help section ends -->
 
@@ -65,8 +65,8 @@
       <h2 class="header">Want to know more?</h2>
       <!-- Header using text element ends -->
       <h2>Shoot me an email, or</h2>
-      <div class="button">
-          <button>GET IN TOUCH</button>
+      <div>
+          <button class="button">GET IN TOUCH</button>
       </div>
     </main>
   </body>
