Adding in cards and paragraph stylesheets for components + cleaning up home page mobile view and first pass of blog page

--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
     <!-- Photo and description begins -->
     <main>
       <div class="container">
-        <div class="column-one">
+        <div class="column">
             <img id="profile_pic" src="./assets/profile.jpeg"></img>
         </div>
-        <div class="column-two">
+        <div class="column">
             <h2>Digital Producer and Fullstack Developer</h2>
-            <p>
+            <p class="paragraph">
                 Experienced Digital Producer with a background in engineering and 7+ years experience leading medium-to-large sized projects and teams. Seeking to keep gaining experience and skills within the digital industry in a team that allows me to develop and apply my creative, technical and management skills.
             </p>
-            <button class="button">FIND MORE</button>
+            <div class="button">
+                <button class="button">FIND MORE</button>    
+            </div>
         </div>
       </div>
       <!-- Photo and description ends -->
@@ -46,13 +48,18 @@
       <!-- Header using text element ends -->
 
       <!-- how can I help section begins -->
-      <p>Algun texto ira aqui pronto</p>
+      
       <div class="container">
-        <div class="column-one">
-            <p class="paragraph-style">Producer Bulrb</p>
+        <p class="paragraph">High quality content is the new PR for companies looking to engage customers, investors, and talent with their brand. But working out why, what, where and how is challenging. </p>
+      </div>
+      <div class="container">
+        <div class="column">
+            <h2>Digital Producer</h2>
+            <p class="paragraph">I’ll help you work out the why and the what, designing a content strategy that will hit your key business goals.</p>
         </div>
-        <div class="column-two">
-            <p class="paragraph-style">Developer Bulrb</p>
+        <div class="column">
+            <h2>Fullstack Developer</h2>
+            <p class="paragraph">Be it blogs, email copywriting, the perfect Instagram or Facebook post or company-defining thought leadership articles and white papers, I have all your content needs covered.</p>
         </div>
       </div>
       <div class="button">
@@ -64,8 +71,10 @@
       <!-- Header using text element begins -->
       <h2 class="header">Want to know more?</h2>
       <!-- Header using text element ends -->
-      <h2>Shoot me an email, or</h2>
-      <div>
+      <div class="container">
+        <h2>Shoot me an email, or</h2>
+      </div>
+      <div class="button">
           <button class="button">GET IN TOUCH</button>
       </div>
     </main>
