--- a/Boilerplate/index.html
+++ b/Boilerplate/index.html
@@ -22,7 +22,30 @@
         <a href="">CONTACT</a>
       </div>
     </nav>
-    <main></main>
+    <main>
+      <div class="container">
+        <h1>Hellow world</h1>
+      </div>
+      <div class="container">
+        <div class="column">
+          <h1>Hellow world</h1>
+        </div>
+        <div class="column">
+          <h1>Hellow world</h1>
+        </div>
+      </div>
+      <div class="container">
+        <div class="column">
+          <h1>Hellow world</h1>
+        </div>
+        <div class="column">
+          <h1>Hellow world</h1>
+        </div>
+        <div class="column">
+          <h1>Hellow world</h1>
+        </div>
+      </div>
+    </main>
   </body>
   <footer>
     <div>
