--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
     </nav>
     <main>
       <div class="container">
-        <h1>About</h1>
-        <p>Text about me</p>
+        <h2>About</h2>
+        <p class="paragraph">Text about me</p>
       </div>
       <h2 class="header">People I have worked with</h2>
       <div class="container">
@@ -44,7 +44,7 @@
         <h1>Brunswick Daily</h1>
         <p>Experience</p>
       </div>
-      <div class="container">
+      <div class="button">
         <button class="button">DOWNLOAD CV</button>
       </div>
     </main>
