--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,25 @@
       </div>
     </nav>
     <main>
-      <h1>Blog</h1>
+      <div class="container">
+        <div class="card">
+          <img
+            class="card-img"
+            src="file:///Users/guillermo/Documents/CoderAcademy/Portfolio/assets/profile.jpeg"
+          />
+          <div class="card-body">
+            <p>Hellow world</p>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img" src="" />
+          <h1>Hellow world</h1>
+        </div>
+        <div class="card">
+          <img class="card-img" src="" />
+          <h1>Hellow world</h1>
+        </div>
+      </div>
     </main>
   </body>
   <footer>
