Adding in 3 first posts and cleaned up the form page as well as creating form.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guillermo Soria</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@300&display=swap"
@@ -37,8 +37,10 @@
             <p class="paragraph">
                 Experienced Digital Producer with a background in engineering and 7+ years experience leading medium-to-large sized projects and teams. Seeking to keep gaining experience and skills within the digital industry in a team that allows me to develop and apply my creative, technical and management skills.
             </p>
+
+
             <div class="button">
-                <button class="button">FIND MORE</button>    
+                <a href="about.html">FIND MORE</a>    
             </div>
         </div>
       </div>
@@ -64,7 +66,7 @@
         </div>
       </div>
       <div class="button">
-        <button class="button">LEARN MORE</button>
+        <a href="services.html">LEARN MORE</a>
       </div>
       
       <!-- how can I help section ends -->
@@ -73,10 +75,10 @@
       <h2 class="header">Want to know more?</h2>
       <!-- Header using text element ends -->
       <div class="container">
-        <h2>Shoot me an email, or</h2>
+        <h2>Send me an email, or get in touch</h2>
       </div>
       <div class="button">
-          <button class="button">GET IN TOUCH</button>
+          <a href="contact.html">GET IN TOUCH</a>
       </div>
     </main>
   </body>
