--- a/contact.html
+++ b/contact.html
@@ -23,19 +23,27 @@
       </div>
     </nav>
     <main>
-      <div class="container">
+      <div class="container" id="get-in-touch">
         <h1>Get in touch</h1>
         <h2>hola@guillermosoria.com.au</h2>
       </div>
-      <div>
-        <form class="container">
-          <label for="name">Name</label>
-          <input type="text" name="name" />
-          <label for="email">Email</label>
-          <input type="text" name="email" />
-          <input id="form-submit" type="submit" />
-        </form>
-      </div>
+      <form class="form">
+        <div class="form-group">
+          <label>Name</label>
+          <input type="text" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label>Email address</label>
+          <input type="text" class="form-control" />
+        </div>
+        <div class="form-group">
+          <label>Message</label>
+          <input id="message" type="text" />
+        </div>
+        <div class="button" id="submit">
+          <a>Submit</a>
+        </div>
+      </form>
     </main>
   </body>
   <footer>
