Added assets, cleaned up contact page and connected formpree.io, built about page and added work experience

--- a/about.html
+++ b/about.html
@@ -29,29 +29,51 @@
       </div>
     </nav>
     <main>
-      <div class="container">
-        <h2>About</h2>
+      <div id="about-container">
+        <h2>From Mexico to Australia. Home is everywhere...</h2>
         <p class="paragraph">Text about me</p>
       </div>
       <h2 class="header">People I have worked with</h2>
       <div class="container">
-        <h1>Luminary Digital</h1>
-        <p>Experience</p>
-      </div>
-      <div class="container">
-        <h1>Digital Noir</h1>
-        <p>Experience</p>
-      </div>
-      <div class="container">
-        <h1>Good Dog Design</h1>
-        <p>Experience</p>
-      </div>
-      <div class="container">
-        <h1>Brunswick Daily</h1>
-        <p>Experience</p>
+        <div class="work-experience">
+          <div>
+            <a href="https://www.luminary.com" target="_blank">
+              <img src="./assets/profile.jpeg" />
+            </a>
+          </div>
+          <h3>Brunswick Daily</h3>
+          <p>Co-Founder + Digital Strategy</p>
+        </div>
+        <div class="work-experience">
+          <div>
+            <a href="https://www.luminary.com" target="_blank">
+              <img src="./assets/Luminary.png" />
+            </a>
+          </div>
+          <h3>Luminary Digital</h3>
+          <p>Digital Producer</p>
+        </div>
+        <div class="work-experience">
+          <div>
+            <a href="https://www.digital-noir.com" target="_blank">
+              <img src="./assets/DN.png" />
+            </a>
+          </div>
+          <h3>Digital Noir</h3>
+          <p>Digital Producer</p>
+        </div>
+        <div class="work-experience">
+          <div>
+            <a href="https://www.gooddogdesign.com" target="_blank">
+              <img src="./assets/GDD.png" />
+            </a>
+          </div>
+          <h3>Good Dog Design</h3>
+          <p>Digital Project Manager</p>
+        </div>
       </div>
       <div class="button">
-        <a>DOWNLOAD CV</a>
+        <a href="assets/resume.pdf" download target="_blank">DOWNLOAD CV</a>
       </div>
     </main>
   </body>
