Added in font awesome, cleaned up blog page, fix footer, linked social media icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@300&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/523740d927.js" crossorigin="anonymous"></script>
   </head>
   <body>
       <!-- Nav starts -->
@@ -53,16 +54,16 @@
       <!-- how can I help section begins -->
       
       <div class="container">
-        <p class="paragraph">High quality content is the new PR for companies looking to engage customers, investors, and talent with their brand. But working out why, what, where and how is challenging. </p>
+        <p class="paragraph">High quality Digital production with the technical background. We could put your project together and make sure we deliver within your deadline. </p>
       </div>
       <div class="container">
         <div class="column">
             <h2>Digital Producer</h2>
-            <p class="paragraph">I’ll help you work out the why and the what, designing a content strategy that will hit your key business goals.</p>
+            <p class="paragraph">I’ll help you work out the why and the what, designing a smooth path to deliver your product.</p>
         </div>
         <div class="column">
             <h2>Fullstack Developer</h2>
-            <p class="paragraph">Be it blogs, email copywriting, the perfect Instagram or Facebook post or company-defining thought leadership articles and white papers, I have all your content needs covered.</p>
+            <p class="paragraph">After being immerse in the digital industry for over 7 years and with a background in engineering, I have the technical knowledge and experience to put together your website or web application up and running.</p>
         </div>
       </div>
       <div class="button">
@@ -74,8 +75,8 @@
       <!-- Header using text element begins -->
       <h2 class="header">Want to know more?</h2>
       <!-- Header using text element ends -->
-      <div class="container">
-        <h2>Send me an email, or get in touch</h2>
+      <div class="container" >
+        <h2 id="get-in-touch">Send me an email, or get in touch</h2>
       </div>
       <div class="button">
           <a href="contact.html">GET IN TOUCH</a>
@@ -84,11 +85,13 @@
   </body>
   <footer class="footer">
     <div>
-      <h1>MELBOURNE AUSTRALIA HOLA@GUILLERMOSORIA.COM.AU</h1>
-    </div>
-    <div class="icons">
-      <a>git icon</a>
-      <a>LinkedIn icon</a>
+      <h2>MELBOURNE AUSTRALIA HOLA@GUILLERMOSORIA.COM.AU</h2>
+      <a class="icons" href="https://github.com/Memiko/portfolio">
+        <i class="fab fa-github"></i>
+      </a>
+      <a class="icons" href="https://www.linkedin.com/in/guillermosoria/">
+        <i class="fab fa-linkedin"></i>
+      </a>
     </div>
   </footer>
 </html>
