--- a/services.html
+++ b/services.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@300&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/523740d927.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav>
@@ -26,13 +30,15 @@
       <h1>Services</h1>
     </main>
   </body>
-  <footer>
+  <footer class="footer">
     <div>
-      <h1>MELBOURNE AUSTRALIA HOLA@GUILLERMOSORIA.COM.AU</h1>
-    </div>
-    <div class="icons">
-      <a>git icon</a>
-      <a>LinkedIn icon</a>
+      <h2>MELBOURNE AUSTRALIA HOLA@GUILLERMOSORIA.COM.AU</h2>
+      <a class="icons" href="https://github.com/Memiko/portfolio">
+        <i class="fab fa-github"></i>
+      </a>
+      <a class="icons" href="https://www.linkedin.com/in/guillermosoria/">
+        <i class="fab fa-linkedin"></i>
+      </a>
     </div>
   </footer>
 </html>
