--- a/about.html
+++ b/about.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@300&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/523740d927.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav>
@@ -31,7 +35,14 @@
     <main>
       <div id="about-container">
         <h2>From Mexico to Australia. Home is everywhere...</h2>
-        <p class="paragraph">Text about me</p>
+        <p class="paragraph">
+          I am Digital Producer and full Stack Developer.<br /><br />
+          I have worked with some of the most talented teams in the Asia-Pacific
+          area and overseas building incredible digital experiences.<br /><br />
+          I've been lucky to work in some exciting projects along my carrer for
+          different industries, from logistics software for the construction
+          industry, to state government and NFPs.<br /><br />
+        </p>
       </div>
       <h2 class="header">People I have worked with</h2>
       <div class="container">
@@ -77,13 +88,15 @@
       </div>
     </main>
   </body>
-  <footer>
+  <footer class="footer">
     <div>
-      <h1>MELBOURNE AUSTRALIA HOLA@GUILLERMOSORIA.COM.AU</h1>
-    </div>
-    <div class="icons">
-      <a>git icon</a>
-      <a>LinkedIn icon</a>
+      <h2>MELBOURNE AUSTRALIA HOLA@GUILLERMOSORIA.COM.AU</h2>
+      <a class="icons" href="https://github.com/Memiko/portfolio">
+        <i class="fab fa-github"></i>
+      </a>
+      <a class="icons" href="https://www.linkedin.com/in/guillermosoria/">
+        <i class="fab fa-linkedin"></i>
+      </a>
     </div>
   </footer>
 </html>
