Update blog page, added two more blog posts, populated services page with copy, created and linked services.css

--- a/services.html
+++ b/services.html
@@ -27,7 +27,32 @@
       </div>
     </nav>
     <main>
-      <h1>Services</h1>
+      <div class="container-services">
+        <h3>Struggling to get on top of everything on your project?</h3>
+        <h3>Have a great idea but don't know where to start from?</h3>
+        <h3>Need to build or tweak something on your website?</h3>
+        <p>I am here to help</p>
+      </div>
+      <h2 class="header">What I offer</h2>
+      <div class="container-services">
+        <h2>Digital Production</h2>
+        <p class="paragraph">
+          Let's bring your idea back to life following the best practices and
+          keeping your timeline and budget on track. I can help you identify
+          flaws along your workflow and adapt it to work more smoothly.
+        </p>
+        <h2>Full Stack Dev</h2>
+        <p class="paragraph">
+          With a background in engineering and currently undertaking a coding
+          boot camp to improve my tech skills, I can assist with the building of
+          your software solution. Let’s chat and find what’s the best approach
+          to tackle your project up.
+        </p>
+      </div>
+      <h2 class="header">Ready to talk?</h2>
+      <div class="button" id="button">
+        <a href="contact.html">GET IN TOUCH</a>
+      </div>
     </main>
   </body>
   <footer class="footer">
